@@ -1,3 +1,7 @@
+2002-07-08  Wakaba <w@suika.fam.cx>
+
+	* TypedText.pm: New module.
+
 2002-06-29  Wakaba <w@suika.fam.cx>
 
 	* ContentType.pm, Params.pm, ValueParams.pm,
